2008-09-01  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* alarm.h, alloc.h, arg.h, array.h, array_slist.h, auxbuf.h,
	bitfield.h block.h, buf.h, buf_line.h, buf_printf.h, codec.h,
	curl.h, data.h debug.h, dev.h, dir.h, dirty.h, err.h, exception.h,
	fatal.h, file.h file_aio.h, filetool.h, getini.h, getopt.h,
	hash.h, hasher.h, helpers.h hup.h, idea-vdl.h, iow.h, iow_all.h,
	iow_socket.h, iow_ssl.h, log.h longmath.h, main.h, main_file.h,
	main_getini.h, main_getopt.h memwild.h, misc_selectcopyloop.h,
	ob.h, privilege.h, proc.h, sc-lib.h sched.h, setproctitle.h,
	shit.h, signals.h, sleep.h, slist.h sock_tool.h, sockact.h,
	sockgen.h, strprintf.h, strwild.h, syscap.h sysfix.h,
	sysfix_cygwin.h, term.h, threads.h, type.h, wild.h, xd.h, xml.h:
	COPYLEFT fixed

2008-08-19  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* getopt.h: improved help for TINO_GETOPT_COUNT

2008-08-17  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* getopt.h (tino_getopt_var_set_arg_imp, tino_getopt_arg):
	TINO_GETOPT_COUNT added

2008-05-30  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* keypressed.h: added

2008-05-29  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* Makefile-tests.sh (cmd-run): command execution fixed

	* getopt.h (TINO_GETOPT_IGNORE): added
	(tino_getopt_var_set_arg): no more print full usage if
	TINO_GETOPT_FN returns error

2008-05-27  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* file.h (tino_file_rename_unlinkEbs): added

	* printf.h: added

	* file.h (tino_file_read_allE): pointer changed to void *

2008-05-23  Valentin Hilbig  <tino@firebird.03.softkill.net>

	* filetool.h: Naming convention
	(tino_file_glue_path): changed such, that the length now is
	calculated, name changed to tino_file_glue_pathOi (i acts as a
	warning that some internals have changed, will be removed in
	future again).
	(tino_file_rename_with_empty_helperEs): added
	(tino_file_backupnameNi): memory leak resolved
	
2008-05-20  Valentin Hilbig  <tino@firebird.03.softkill.net>
